# lople

./: pyproject.toml
alembic/: env.py
alembic/versions/: 35edab9db153_.py  5608ed0a4891_.py
docker/: docker-compose-infra.yml
scripts/: initproject.sh  makemigration.sh  reset_migration.sh
src/: main.py
src/app/: router.py
src/app/map/api/: dependencies.py
src/app/map/api/endpoint/: map.py
src/app/map/schema/: map.py
src/app/map/service/: map.py
src/app/open_api/api/: dependencies.py
src/app/open_api/api/endpoint/: fiscal.py  welfare.py
src/app/open_api/model/: fiscal.py  welfare.py
src/app/open_api/repository/: fiscal.py  welfare.py
src/app/open_api/schema/: fiscal.py  welfare.py
src/app/open_api/service/: fiscal.py  welfare.py
src/app/open_fiscal/api/: dependencies.py
src/app/open_fiscal/api/endpoint/: fiscal.py  welfare.py
src/app/open_fiscal/model/: dept.py  fiscal.py  welfare.py
src/app/open_fiscal/repository/: fiscal.py  welfare.py
src/app/open_fiscal/schema/: welfare.py
src/app/open_fiscal/service/: fiscal.py  welfare.py
src/app/user/api/: dependencies.py
src/app/user/api/endpoint/: google_oauth.py  social_login.py  social_user.py  user.py  user_data.py
src/app/user/model/: user.py  user_data.py
src/app/user/repository/: social_user.py  user.py  user_data.py
src/app/user/schema/: login.py  register.py  social_user.py  user.py  user_data.py
src/app/user/service/: social_user.py  user.py  user_data.py
src/app/user/service/social/: base.py  google.py
src/app/user/service/social_auth/: base.py  google.py
src/app/user/service/social_auth/handler/: base.py
src/app/user/service/social_auth/service/: base.py  google.py
src/core/: config.py  lifespan.py  test.py
src/core/dependencies/: auth.py  db.py  infra.py  oauth.py
src/core/models/: helper.py  model.py  repository.py
src/core/utils/: polarshelper.py  polarspagination.py  pydantichelper.py
src/core/utils/googleapi/: peopleapi.py
src/core/utils/openapi/: data_cache.py  data_helper.py  data_loader.py  data_manager.py  data_saver.py
src/core/utils/social_api/: data_helper.py
src/core/workers/: mapworker.py
tests/: _nont.py
tests/repositories/: test_social_user.py
tests/social_test/: login.html  main.html
tests/social_test/google/: callback.html
tests/social_test/kakao/: callback.html
